@@ -27,10 +27,10 @@ DIST gitlab-ce-9.3.0_rc2.tar.gz 31567867 SHA256 fbd93af8281b2460a9600a84b24b007e
 EBUILD gitlab-ce-8.15.8.ebuild 11986 SHA256 6c86e66d4b568b88dd44ec52401e25c33b2d5e61d9a76e77180320d40ef57132 SHA512 91e1dc1cd8b9b77ea039e7e194b06c44900511b9e7787a714faec14746f96da6d00aa66bd16763732c468d8a46815e29fe761349a0a0d712db21bd4a12d31e06 WHIRLPOOL 50923df1fdda85abf7c7984a49d73d6486628439612de18ec3914274f3a053ce98ffbffec0f6ca9f2f9ba1ca9491467de0762d2d4a31ea480f32eb68222c79f9
 EBUILD gitlab-ce-8.16.9.ebuild 11986 SHA256 21a0d7336a0a022db75ded6f29fe12d64012bd20a46e538ce0940a3c7e402a11 SHA512 c8e3ff6de9d97e25300315e967b7bcfc7d4aa5bc3e78aa45564e12bb673fbf79c9ba454174fe4f362d9d58575611debf797b52685b2061ac3053113390401a5c WHIRLPOOL 4644465cfcaf81184c62acf888ced3f16ccffc9de84fac7774a5463a778684c051580dd1f273546b9be8a0ace83243abc06e1e5ba042b18a10f7d352783a995f
 EBUILD gitlab-ce-8.17.6.ebuild 12932 SHA256 e5f7cc94653a6c55627264e02116d43febdcc58bd60ccf9f7c5fecf9476d1b0a SHA512 65fc18401842e1c1176d8178acff3ca48f1fe80ee8869b7263cd1819ced46bb8d1c2771226d9f7c9c5507ef120d69d66114605d8ed7b3923e5f9a61e2cc0125d WHIRLPOOL 3c979ba2e30fbb3c628063f71e3a8b12183632413f4342b81298e4fd4847e8a583adab16c202340d89fde010097f140005ae564c0d52fefb0fcb57b67ede398d
-EBUILD gitlab-ce-9.0.10.ebuild 13087 SHA256 28da4095f2a71224e5dc0d1edb358218f7a8712aee9b6255b831e4b5b9c3e6b3 SHA512 5e6d1a29714537cb2960caa289e8871cad695c6b509e5505efc4bc55d964d8a89f6f95a4355d2530d7f5eea2923e2cb5dd6023e59b084537c8594c54acadde48 WHIRLPOOL 348b3a87b1bd80e82fddda2d5c17072df67178eb52e2b3bd586ea2838b91cb5d8d30919cf306801f4d0dddd7246e2f917f519d2df4697c117012b46d528d7831
-EBUILD gitlab-ce-9.1.7.ebuild 13243 SHA256 70396c636ab5c0490c6641be0fece874d87afafb4d73c6032937b31e9cdca16c SHA512 3ad301c43b4500a1e75b9dc3f694c189d5426bb1a26f512e75e833d849e8d070b162c29425cda42e9cc074b5fe0ed007f5baa9a1c32c47dc478ec7333847c00e WHIRLPOOL f6483c776faefd60a8bd38a769fd326b1351ea9c1df65314baf314d0b4de21304fd618d29a28d8a75ee43977b97d3e6bc23f9d040fde626a20771e901d8f52fe
-EBUILD gitlab-ce-9.2.6.ebuild 12988 SHA256 b6d921492ebd09c4c768d56a46eb4aa24f8f68585b3f4680621952922a2bae83 SHA512 ef38e8c04bf3d2f271fc2afa0e73c21ccc3d8dc583857f71951e3cf3f9ffdf7b362bc5120f4bc892741ae0f9b99cfe8312dbfc9182ee0408f336c863bdefdfa3 WHIRLPOOL 727907a2a38eb287e091bef655f523280f2bf8893fdb8b2e5e58f1d1089c6398772d995bd033997024c32837d995f7c061cfc28c751f913d65761a3f71b14961
-EBUILD gitlab-ce-9.3.0_rc2.ebuild 12822 SHA256 9144b747ac6dc1c21545960749ef0931a8934704feac5cdb7a8b88f7ce264b50 SHA512 04bc05883a0666f68538e828568f199c2d760b29735131ce557b177738bc3235187cfce5a5553c7f989274d96577a40f3962d8d5ce519c2a05749be6c8a847fc WHIRLPOOL a47ee848d7796e8d186ee22984d7f6f7e41e3e546de3098c767019dd1314f62bba51d677a08b847b274184681c687b8391b5f0d8f05821cbd1544d16fffc9d6f
-EBUILD gitlab-ce-9999.ebuild 12782 SHA256 9d8d8407ecc36d9c1c25522856cb543bbd9e96991e207b2056f1c2b8ac0d219c SHA512 d50cfc62d4df3b38295e618f9c52115d7128771fc494684d1414cdf709db668a521929e2108aab0176a5611c5e15838b6dca333141da38763a9e823c52f5a8d8 WHIRLPOOL c84f158d8c8b0c8c6d4c13bb8f03a0d4708846a0b65db9f248bb64954c44007bbe4492f610f5fe5f859ca582e26614827dd81f9ec37791b8f735b373ad05d9b3
-MISC ChangeLog 18769 SHA256 2bfc83849b625b1eda3a5eb5bf629f8e6bdd3cff317205b2f2985d0d0d4d0808 SHA512 0d5cf15b302132b446a3659ecc0be1a09d0060f4b13640186f24928341c746f88ae1793d13481c6b621290329621465ac97b36ef89f8757509662c191dc60bc5 WHIRLPOOL 8070acf834d4cdf744e2304fa8aa9b014c5277c291190dcacbdf9100174aa29f26a34e4442ac0c28a35fe2c698200b5b2b0914a34e380ac698f8bf0ef555ab66
+EBUILD gitlab-ce-9.0.10.ebuild 13094 SHA256 3095dbce78328f513eaf599486af63ae383635b305f24293a4cde3c3fe2ef55e SHA512 f8f500dcb2192c3b80423bf609bd1d0628471f75bdcd9e991489d0560ec34e1c0cc2362cdb6954014ac5e2e3ebed1d7f8df384cb655be73c50c6f54fa5ea62b9 WHIRLPOOL b0107dae53175d047b036fe98ea5b330fa521eb025a86f0dc011654e6aaaa7ee956c789de7a045854df72cddd96d558fadded069cf023111e6dfc7407490d469
+EBUILD gitlab-ce-9.1.7.ebuild 13250 SHA256 be342467f79215ec736c6d1f4d9d26bb679116f422585cceeac90bdf15dedfec SHA512 eca7584067d438b1feeeb56d7ef765af1f96f3fce8098d32e70e4f706c9572a52ffd7d4594c949234a1d25e9f52b220892d656afce4b30ca32ebe51665d0326c WHIRLPOOL 27d89d8d86c583da924bdac4f6db7216be151a55d5b14f7a78dd77417cd643c506c1c2ec652e234df7763472a0cad21794645dd85cfb404276179721649d4077
+EBUILD gitlab-ce-9.2.6.ebuild 12995 SHA256 34a696b936cf59df8b9aeb59d2862f4aa8de068f2ac857380b449aefe804138d SHA512 3750243a02398d528f222d6694930142b57f231fa8401e07f7e113940b5f1e1a1c78a24e53d2600a3109934d9aee2e4ffed37b911fc448cacd494f22f592aa87 WHIRLPOOL e55e294f1c72d0fe2a13dd14a1e126128f5fb6273cfa971b5d654c14458b06e375340dc7fd7076c297da8c7c5719f8ef51572b29cb400c5ec1fe108ef9c5abeb
+EBUILD gitlab-ce-9.3.0_rc2.ebuild 12829 SHA256 6951949f8d98f867746a0128e99ce3baabddecdaa45952565f38a913b2868058 SHA512 3337e413db8680d0d177099425a71c2410afdec9130d57f9c910770aeb12dd7a13c410782f41f8a0cd24d243534d513b66ec4d93eb09c7e15896716863682eb0 WHIRLPOOL 6b9d03912224808065b3bc301f9ce7b82925293db2916cdeb3184b28c0d58fc034b06dda6b43109b251c942d3b4bebd0c4e6bde7c644630baaece585c35ae6d3
+EBUILD gitlab-ce-9999.ebuild 12789 SHA256 27db871b7d51cae37b6802043c82887bb810c1183682ce6c7efe0dc546d9b29e SHA512 99ca91ab0b8045d8bc2cd9d4208ecd4e8eb96c3d01afe49d119bb5677ee88f5f700042f502ab0c446f7acaaaeb7b9758c6d721a91f256eea335eb744a05a4b27 WHIRLPOOL a1e812d1d9562e7febee89e5c847ea0febec360aee38efc5cf779e45b92bb73eff3f066eb90fb96c292e8cfdc2a322bc9222a786796ac0470a221e44369a3270
+MISC ChangeLog 19013 SHA256 a33daa5526f7c0acc245e699eaa61207f1c1eda44b383e768e84d2dd329e4fa2 SHA512 7fb0519a8f4e824e26bcc8a5eec77c6f0f8245266bd2e986b2a1ec2c344b843caea1657e93239b8418c40b9f0647c9585dab37a1f274b606f7f8796a39e3e1e9 WHIRLPOOL 3b7fa72a3698fdf4fac97aa21a42a36c58c14f0553663717c41bd781de8a58b15a7d3c02a1469d733bb909868cc75abc0fa81b61a3069f8e6934dba57d4a3932
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
